# wrs2020

./: .gitignore  .gitmodules  README.md  requirements.txt
ROBOTIS/ROBOTIS-Framework/robotis_controller/src/robotis_controller/: robotis_controller.cpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module/src/: base_module.cpp  robotis_state.cpp  slide_control.cpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module_msgs/: CMakeLists.txt
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module_msgs/srv/: CheckRangeLimit.srv
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/: CMakeLists.txt  package.xml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/include/manipulator_h_gui/: main_window.hpp  qnode.hpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/src/: main_window.cpp  qnode.cpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/ui/: main_window.ui
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_kinematics_dynamics/config/: link_param_left.yaml  link_param_right.yaml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_kinematics_dynamics/src/: manipulator_h_kinematics_dynamics.cpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_manager/launch/: dual_arm.launch  single_arm.0.launch  single_arm.launch
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_manager/src/: manipulator_h_manager.cpp
ab/: CMakeLists.txt  package.xml
ab/cfg/: calibration.pckl
ab/examples/: kinect.launch
ab/launch/: aruco_hand_eye.launch  eye-in-hand.launch
ab/src/aruco_hand_eye/: MarkerPosture.py  __init__.py  aruco_calibration.py  hand_eye_connector.py
ab/srv/: aruco_info.srv  hand_eye_calibration.srv
arm_control/: CMakeLists.txt  setup.py
arm_control/src/arm_control/: __init__.py  arm_task.py  dual_arm_task.py  robotiq_2f_gripper.py  suction.py
lib/Arduino/libraries/ros_lib/arm_control/: WebCmd.h
lib/libmodbus/lib/lib/: libmodbus.so.5.1.0
libmodbus/: Makefile  Makefile.in  config.h.in  config.status  configure  libmodbus.pc  libtool
libmodbus/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
libmodbus/doc/: Makefile  Makefile.in
libmodbus/src/: Makefile  Makefile.in
libmodbus/src/.deps/: modbus-data.Plo  modbus-rtu.Plo  modbus-tcp.Plo  modbus.Plo
libmodbus/src/.libs/: libmodbus.so.5.1.0
libmodbus/tests/: Makefile  bandwidth-client  bandwidth-server-many-up  bandwidth-server-one  random-test-client  random-test-server  unit-test-client  unit-test-server  version
libmodbus/tests/.deps/: bandwidth-client.Po  bandwidth-server-many-up.Po  bandwidth-server-one.Po  random-test-client.Po  random-test-server.Po  unit-test-client.Po  unit-test-server.Po  version.Po
libmodbus/tests/.libs/: bandwidth-client  bandwidth-server-many-up  bandwidth-server-one  random-test-client  random-test-server  unit-test-client  unit-test-server  version
linear_motion/: CMakeLists.txt
linear_motion/src/: linear_z.cpp
nodejs_pkg/myapp/: package-lock.json  package.json
strategy/: CMakeLists.txt  package.xml
strategy/action/: Arm.action
strategy/cfg/: Robot.cfg
strategy/scripts/: arm_action_server.py  core.py  disposing_task.py  expired_task.py  get_image_info.py  my_state_machine.py  one_obj_task.py  stocking_task.py  test_action_client.py
strategy/scripts/actionlib_tutorials/: simple_action_client.py  simple_action_server.py
strategy/scripts/mir_bridge/: mir_bridge.py  position_type.py
strategy/scripts/my_ros_bridge/: my_ros_bridge.py
strategy/scripts/old/: disposing_task.py
strategy/src/: disposing_old.py  disposing_task.py  object_pos.py  stocking_task.py
strategy/srv/: ArUcoInfo.srv
udev_rules/: 99-arm.rules
vacuum/arduino_ros_vacuumServiceServer/: arduino_ros_vacuumServiceServer.ino
wrs_gazebo/dual_arm_control/config/: dual_arm_control (another copy).yaml  dual_arm_control (copy).yaml  dual_arm_control.yaml
wrs_gazebo/dual_arm_control/launch/: dual_arm_control.launch
wrs_gazebo/mir/mir_gazebo/launch/: mir_empty_world.launch  mir_gazebo_common.launch
wrs_gazebo/mobile_dual_arm/launch/: mobile_dual_arm.launch
wrs_gazebo/mobile_dual_arm/scene/meshes/: burger.STL  drink_.STL  sandwitch.STL
wrs_gazebo/mobile_dual_arm/urdf/: mobile_dual_arm (copy).xacro  mobile_dual_arm.gazebo  mobile_dual_arm.xacro
wrs_gazebo/mobile_dual_arm/worlds/: mobile_dual_arm.world
wrs_gazebo/single_arm/single_arm_description/urdf/: single_arm.gazebo.xacro  single_arm.transmission.xacro  single_arm.xacro
wrs_gazebo/slide_rail/: CMakeLists.txt  package.xml
wrs_gazebo/slide_rail/config/: joint_names_Slide_rail.yaml
wrs_gazebo/slide_rail/launch/: display.launch  gazebo.launch
wrs_gazebo/slide_rail/urdf/: slide_rail.xacro  slide_rail_1.urdf
wrs_gazebo/suction_urdf/urdf/: suction.transmission.xacro  suction_urdf.xacro
wrs_gazebo/timda_body/: CMakeLists.txt  package.xml
wrs_gazebo/timda_body/config/: joint_names_timda_body.yaml
wrs_gazebo/timda_body/launch/: display.launch  gazebo.launch
wrs_gazebo/timda_body/meshes/: base_link.STL  slide_left.STL  slide_right.STL
wrs_gazebo/timda_body/urdf/: timda_body.gazebo.xacro  timda_body.xacro  timda_body_1.urdf
(+29 files in other folders)
